# rdoist

./: Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
src/: add_cmd.rs  cli.rs  config.rs  list_cmd.rs  main.rs  parser.rs  project.rs  task.rs  todoist_client.rs
