[package]
name = "rdoist"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.16", features=["derive"]}
home = "0.5.9"
libnotify = "1.0.3"
regex = "1.10.6"
serde = { version = "1.0.208", features=["derive"]}
serde_json = "1.0.125"
toml = "0.8.19"
ureq = { version = "2.10.1", features=["json"]}
